<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.activities.Register"
    android:background="@drawable/splash_2">
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_marginTop="300dp"
        app:indicatorName="LineScalePulseOutIndicator"
        app:indicatorColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        />
    <ImageButton
        android:id="@+id/btn_back_menu"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_keyboard_arrow_left_48"
        style="?android:attr/borderlessButtonStyle"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:civ_border_width="3dp"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        app:civ_border_color="#FFFFFF"
        android:src="@drawable/ellipse"/>
        <ImageView
            android:id="@+id/edit_profile_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:layout_marginTop="105dp"
            android:layout_marginLeft="240dp"
            android:background="@drawable/shape_button_update"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/profile"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textSize="36sp"
        />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_9"
        android:layout_gravity="center_horizontal"
        android:padding="13dp"
        android:singleLine="true"
        android:hint="@string/hint_name"
        android:layout_marginTop="15dp"
        />
    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_9"
        android:layout_gravity="center_horizontal"
        android:padding="13dp"
        android:singleLine="true"
        android:hint="@string/hint_apellido_p"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/etLastName2"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_9"
        android:layout_gravity="center_horizontal"
        android:padding="13dp"
        android:hint="@string/hint_apellido_m"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/etMail"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:singleLine="true"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_9"
        android:layout_gravity="center_horizontal"
        android:padding="13dp"
        android:hint="@string/hint_correo"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_9"
        android:layout_gravity="center_horizontal"
        android:padding="13dp"
        android:hint="@string/hint_contraseña"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/update"
        android:textColor="@color/gradientStart"/>



</LinearLayout>