<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:orientation="vertical"
    tools:context=".Activity.activities.Login">

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_marginTop="300dp"
        app:indicatorName="LineScalePulseOutIndicator"
        app:indicatorColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        />
    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_9"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/fill_1"
        android:drawablePadding="10dp"
        android:hint="@string/hint_correo"
        android:padding="20dp"
        android:layout_marginTop="70dp"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_9"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_contraseña"
        android:drawableLeft="@drawable/llavesita"
        android:drawablePadding="10dp"
        android:padding="20dp"
        android:layout_marginTop="40dp"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_4"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/btn_login"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRecuperar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:text="@string/recuperar"/>
        <TextView
            android:id="@+id/tvRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            android:textSize="20sp"
            android:layout_marginLeft="50dp"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>