<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/signature_pad_container">

            <FrameLayout
                android:layout_alignParentBottom="true"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <com.github.gcacace.signaturepad.views.SignaturePad
                android:id="@+id/signaturePad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:penColor="@android:color/black" />
            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/signaturePad"
                android:gravity="center"
                android:text="@string/name"/>

        </RelativeLayout>
        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txtNombre"
            android:gravity="center"
            android:text="Locacion..."/>
        <LinearLayout

            android:layout_weight="0"
            android:id="@+id/buttons_container"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mClearButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/limpia"
                android:enabled="false" />

            <Button
                android:id="@+id/mSaveButton"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/guarda"
                android:enabled="false" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
