<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash_2">
    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:text="Cerrar sesion"
        android:elevation="0dp"
        android:textColor="@android:color/white"
        android:drawablePadding="5dp"
        android:background="@android:color/transparent"
        />
    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"

        />
    <TextView
        android:id="@+id/tvwUser"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text=""/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llReportes"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/shape_menu_items"

            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_note"
                android:tint="@color/gradientStart"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_reportes"
                android:textColor="@color/gradientStart"
                android:layout_gravity="center"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSignature"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/shape_menu_items">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check"
                android:tint="@color/gradientStart"
                />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_signature"
                android:textColor="@color/gradientStart"
                android:layout_gravity="center"
                android:textAlignment="center"
                />
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llProducts"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/shape_menu_items">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_shopping_cart"
                android:tint="@color/gradientStart"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_products"
                android:textColor="@color/gradientStart"
                android:layout_gravity="center"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llProfile"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/shape_menu_items">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person_24px"
                android:tint="@color/gradientStart"
               />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_profile"
                android:textColor="@color/gradientStart"
                android:layout_gravity="center"
                android:textAlignment="center"/>
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>



</LinearLayout>